--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -23,9 +23,8 @@ jobs:
       - name: Build
         run: npm run build
 
-      - name: Deploy
-        run: |
-          git config user.name "GitHub Actions"
-          git config user.email "actions@github.com"
-          gh auth login --with-token <<< "SEU_TOKEN_DO_GITHUB"
-          gh pages -d build
+      - name: Deploy to GitHub Pages
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./build
